# fastapi-sso

./: .env  pyproject.toml
fastapi_sso/app/: app.py
fastapi_sso/managers/: group_manager_sqlite.py
fastapi_sso/models/: group.py  user.py
fastapi_sso/services/: group_management_service.py
fastapi_sso/services/startup/: initialize_database.py
fastapi_sso/utils/: auth.py
